fix: resolve update (PUT) operations for Crops, Animals, and Users